--- a/stepMotor_arm.uvprojx
+++ b/stepMotor_arm.uvprojx
@@ -339,7 +339,7 @@
               <MiscControls></MiscControls>
               <Define>STM32F10X_LD</Define>
               <Undefine></Undefine>
-              <IncludePath>.\SYSTEM\delay;.\SYSTEM\sys;.\SYSTEM\usart;.\HARDWARE\ADC;.\HARDWARE\PORT;.\HARDWARE\SPI;.\HARDWARE\SYSTICK;.\HARDWARE\TIMER;.\HARDWARE\LED;.\HARDWARE\STMFLASH;.\USER;.\HARDWARE\EXTI;.\HARDWARE\OLED;.\HARDWARE\CAN;.\HARDWARE\AS5600</IncludePath>
+              <IncludePath>.\SYSTEM\delay;.\SYSTEM\sys;.\SYSTEM\usart;.\HARDWARE\ADC;.\HARDWARE\PORT;.\HARDWARE\SPI;.\HARDWARE\SYSTICK;.\HARDWARE\TIMER;.\HARDWARE\LED;.\HARDWARE\STMFLASH;.\USER;.\HARDWARE\EXTI;.\HARDWARE\OLED;.\HARDWARE\CAN;.\HARDWARE\AS5600;.\HARDWARE\STEPMOTOR</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -472,6 +472,11 @@
               <FileName>myiic.c</FileName>
               <FileType>1</FileType>
               <FilePath>.\HARDWARE\AS5600\myiic.c</FilePath>
+            </File>
+            <File>
+              <FileName>stepMotor.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\HARDWARE\STEPMOTOR\stepMotor.c</FilePath>
             </File>
           </Files>
         </Group>
